# wiresx_dashboard_companion

./: .gitignore  Cargo.toml  README.md  build.rs  conf-example.toml  conf.toml
.github/workflows/: artifact.yml  release.yml  rust.yml  tag.yml
icons/: app-icon.psd
src/: conf.rs  error_log.rs  main.rs  windows.rs  wiresx_csv.rs
