[package]
name = "wiresx_dashboard_companion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
csv = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version =  "0.4.31",features = ["serde"]  }
figment = { version = "0.10", features = ["toml"] }

[profile.release]
opt-level = 3
debug = false
lto = "thin"
